force-app/main/default/objects/Telia_Settings__mdt/Telia_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Telia Setting</label>
    <pluralLabel>Telia Settings</pluralLabel>
</CustomObject>