force-app/main/default/objects/Telia_Settings__mdt/fields/Days_before_deactivating_portal_user__c.field-meta.xml
<CustomField>
    <fullName>Days_before_deactivating_portal_user__c</fullName>
    <inlineHelpText>Days before deactivating portal user with no login</inlineHelpText>
    <label>Days before deactivating portal user</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>