force-app/main/default/objects/Telia_Settings__mdt/fields/NPS_Auto_Update_Days_Before_NPS_Send_Dat__c.field-meta.xml
<CustomField>
    <fullName>NPS_Auto_Update_Days_Before_NPS_Send_Dat__c</fullName>
    <label>NPS Auto Update Days Before NPS Send Dat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>