force-app/main/default/objects/Telia_Settings__mdt/fields/NPS_Check_days_before_NPS_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>NPS_Check_days_before_NPS_Send_Date__c</fullName>
    <label>NPS Check days before NPS Send Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>