force-app/main/default/objects/Telia_Settings__mdt/fields/NPS_Reminder_days_before_NPS_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>NPS_Reminder_days_before_NPS_Send_Date__c</fullName>
    <description>Number of days before sending NPS survey reminder to account owners.</description>
    <label>NPS Reminder days before NPS Send Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>