force-app/main/default/objects/Telia_Settings__mdt/fields/NPS_Send_Date_2__c.field-meta.xml
<CustomField>
    <fullName>NPS_Send_Date_2__c</fullName>
    <label>NPS Send Date 2</label>
    <type>Date</type>
</CustomField>