force-app/main/default/objects/Telia_Settings__mdt/fields/Opportunity_Default_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Default_Pricebook__c</fullName>
    <label>Opportunity Default Pricebook</label>
    <length>30</length>
    <type>Text</type>
</CustomField>