force-app/main/default/objects/Telia_Settings__mdt/fields/Portal_Reminder_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Portal_Reminder_Frequency__c</fullName>
    <description>Number of days between sending portal reminders to the onboarding portal user, starting from portal user creation until all information has been gathered/submitted.</description>
    <inlineHelpText>Number of days between sending portal reminders to the onboarding portal user, starting from portal user creation until all information has been gathered/submitted.</inlineHelpText>
    <label>Portal Reminder Frequency</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>