force-app/main/default/objects/Telia_Settings__mdt/fields/Product_FactBook_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_FactBook_Activation_Date__c</fullName>
    <description>From which date should the product factbook be visible on the opportunity layout?</description>
    <label>Product FactBook Activation Date</label>
    <type>Date</type>
</CustomField>