force-app/main/default/objects/Telia_Settings__mdt/fields/Renewal_Win_Rate_KA__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Win_Rate_KA__c</fullName>
    <description>This is used in Revenue Forecasting formulas.</description>
    <label>Renewal Win Rate KA</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>