force-app/main/default/objects/Telia_Settings__mdt/fields/Revenue_Forecast_Active__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Forecast_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this setting is checked, Create New Opportunity flow will create Revenue Forecast data dependent upon user input.</description>
    <inlineHelpText>If this setting is checked, Create New Opportunity flow will create Revenue Forecast data dependent upon user input.</inlineHelpText>
    <label>Revenue Forecast Active</label>
    <type>Checkbox</type>
</CustomField>