force-app/main/default/objects/Telia_Settings__mdt/fields/Run_Rate_updated_until__c.field-meta.xml
<CustomField>
    <fullName>Run_Rate_updated_until__c</fullName>
    <description>This field is used with a formula that excludes Revenue Forecasts on closed won opportunities when the run rate has been updated.</description>
    <label>Run Rate updated until</label>
    <type>Date</type>
</CustomField>