force-app/main/default/objects/Telia_Settings__mdt/fields/Send_out_Auto_Portal_Invite_for_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Send_out_Auto_Portal_Invite_for_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is true Automatic portal invite for Renewals is activated.</description>
    <inlineHelpText>Automatic portal invite for Renewals for BA/MA users is activated if this field is selected.</inlineHelpText>
    <label>Send out Auto Portal Invite for Renewal</label>
    <type>Checkbox</type>
</CustomField>