force-app/main/default/objects/Telia_Settings__mdt/fields/TPX_Active_for_portal__c.field-meta.xml
<CustomField>
    <fullName>TPX_Active_for_portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked Quotes with TPX products can be accessed in Potal</description>
    <inlineHelpText>If checked Quotes with TPX products can be accessed in Potal</inlineHelpText>
    <label>TPX Active for portal</label>
    <type>Checkbox</type>
</CustomField>